# kfood-api

./: .gitignore  README.md  main.py  pyproject.toml
api/: __init__.py  predict.py
data/: class_mapping.json  class_mapping_backup.json  food_class_mapping.csv
models/: __init__.py  efficientnet.py
schemas/: __init__.py  prediction.py
services/: __init__.py  gradcam_service.py  model_service.py
train/: Vgg16_0824.py  class_mapping.json  covnet.py  efficientnet_v2_s_0823.py  resnet34_0824.py  split_data.py  vgg_test.py
utils/: __init__.py  gradcam.py
